Implementation of basic defense algorithm

--- a/ConnSix/build.gradle
+++ b/ConnSix/build.gradle
@@ -27,3 +27,5 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
