--- a/ConnSix/.settings/org.eclipse.buildship.core.prefs
+++ b/ConnSix/.settings/org.eclipse.buildship.core.prefs
@@ -5,7 +5,7 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/Library/Java/JavaVirtualMachines/amazon-corretto-11.jdk/Contents/Home
+java.home=D\:/Program Files/Java/jdk-17.0.2
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
